--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,3 +1,5 @@
+@import "customSettings";
+
 // Global Foundation Settings
 @import "settings";
 
@@ -10,8 +12,8 @@
 // Import specific parts of Foundation by commenting the import "foundation"
 // and uncommenting what you want below. You must uncomment the following if customizing
 
-// @import "foundation/components/global"; // *always required
-// @import "foundation/components/grid";
+@import "foundation/components/global"; // *always required
+@import "foundation/components/grid";
 
 //
 // Use this grid if you want to start using the new Foundation 5 grid early.
